--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export"
-    
-
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "framer-motion": "^11.11.7",
     "next": "14.1.0",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
